--- a/Elmo_tutorial.ipynb
+++ b/Elmo_tutorial.ipynb
@@ -564,11 +564,11 @@
     "\n",
     "train with the same command as above with a new parameter:\n",
     "\n",
-    "    python bin/train_elmo.py --train_prefix= <path to training folder> --vocab_file <path to vocab file> --save_dir <path where models will be checkpointed> --restart_ckpt_file <path to checkpointed model>\n",
+    "    python bin/train_elmo_updated.py --train_prefix= <path to training folder> --vocab_file <path to vocab file> --save_dir <path where models will be checkpointed> --restart_ckpt_file <path to checkpointed model>\n",
     "     \n",
-    "replace the _training.py_ within _bilm_ with the updated training.py attached at _home_\n",
+    "replace the _training.py_ within _bilm_ with the updated _training_updated.py attached at _home_\n",
     "\n",
-    "In the _train_elmo.py_ within _bin_, set these options based on your data:\n",
+    "In the _train_elmo_updated.py_ within _bin_, set these options based on your data:\n",
     "\n",
     "    batch_size = 128  # batch size for each GPU\n",
     "    n_gpus = 3\n",
