--- a/Elmo_tutorial.ipynb
+++ b/Elmo_tutorial.ipynb
@@ -17,7 +17,8 @@
     "import tensorflow as tf\n",
     "import tensorflow_hub as hub\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as npfrom sklearn.manifold import TSNE\n",
+    "import numpy as np\n"
+    "from sklearn.manifold import TSNE\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "from tensorflow.contrib.tensorboard.plugins import projector"
    ]
